2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind C-c DEL to delete-char in paredit-mode.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (pp-default-function): Declare.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-repo-up-to-date-p): Check push remote too.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Update macros in dotemacs-core

	* site-lisp/dotemacs-core.el (delq!, remq!): Fix.
	(delete!, remove!): New functions.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Fix modify-other-keys--init

	* site-lisp/modify-other-keys.el (modify-other-keys--init):
	Use setf with delete to make sure the value is actually deleted.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Do not use built-in packages any more.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-message): Error if message ring is empty.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* init.el: Disable meow-indicator since we use doom-modeline.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Fix error `C-<space>' undefined

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): Use SPC instead of
	<space>.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Improve message-insert-ring

	* init.el (message-ring-insert): Use `ring-remove+insert+extend'
	to make sure the message is not duplicated.
	(message-ring-inhibit-regexps): Update default ignore regexps.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Workaround an Emacs bug

	* init.el: Do not reenable `lin-global-mode' when reloading
	init.el.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Only enable igc idle timer when supported.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	New command `copy-message'

	* init.el (message-ring, message-ring-insert)
	(message-ring-inhibit-regexps, message-ring-insert-functions): New
	vars.
	(message-ring-ignore-keystroke, message-ring-inhibit)
	(message-ring-insert): New functions.  Added to
	`message-ring-insert-functions'.
	(message-insert-ring): New function.  Added to
	`set-message-functions'.