@@ -252,13 +252,10 @@
   (interactive)
   (let* ((cands (mapcan #'gtkdoc--extract-symbols gtkdoc-doc-list))
          (default (gtkdoc--default-candidate cands))
-         (metadata `(metadata . ((category . gtkdoc-entry)
-                                 (annotation-function . ,#'gtkdoc--annotate)
-                                 (group-function . ,#'gtkdoc--group))))
-         (collection (lambda (str pred action)
-                       (if (eq action 'metadata)
-                           metadata
-                         (complete-with-action action cands str pred))))
+         (metadata `((category . gtkdoc-entry)
+                     (annotation-function . ,#'gtkdoc--annotate)
+                     (group-function . ,#'gtkdoc--group)))
+         (collection (completion-table-with-metadata cands metadata))
          (selected (completing-read (format-prompt "Go to documentation" default)
                                     collection nil t nil nil default))
          (cand (car (or (member selected cands)
